clusters/main/authentik/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/instance: vault
    app.kubernetes.io/name: vault-agent-injector
  name: vault-agent-injector-cfg-authentik
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUNTVENDQWU2Z0F3SUJBZ0lVV1VBSC84aWY2YnN5Mlp6MitNbWdGMFdiZlI4d0NnWUlLb1pJemowRUF3SXcKR2pFWU1CWUdBMVVFQXhNUFFXZGxiblFnU1c1cVpXTjBJRU5CTUI0WERUSTFNVEl4TnpFNU1EZ3dOVm9YRFRNMQpNVEl4TlRFNU1Ea3dOVm93R2pFWU1CWUdBMVVFQXhNUFFXZGxiblFnU1c1cVpXTjBJRU5CTUZrd0V3WUhLb1pJCnpqMENBUVlJS29aSXpqMERBUWNEUWdBRVpVSTZRZGp6Nk4wOHdyeDdTbTF4YnppeGVjK0sybHVXc2JLK1N2WGQKZEhsaHl2bHpvakdWNkhtZVlSV3hwSmNaUkJZaS9UZnNsYkRyNm41WFJvMEl1cU9DQVJBd2dnRU1NQTRHQTFVZApEd0VCL3dRRUF3SU [...]
    service:
      name: vault-agent-injector-svc
      namespace: vault
      path: /mutate
      port: 443
  failurePolicy: Fail
  matchPolicy: Exact
  name: vault.hashicorp.com
  namespaceSelector: {}
  objectSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - authentik
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
    scope: Namespaced
  sideEffects: None
  timeoutSeconds: 30
